@@ -1,3 +1,7 @@
+2009-04-20  Jaroslav Hajek  <highegg@gmail.com>
+
+	* special-matrix/vander.m: Allow second argument.
+
 2009-04-17  Rik  <rdrider0-list@yahoo.com>
 
 	* plot/__marching_cube__.m: Correct help Texinfo so manual will compile
